[build-system]
requires = [
  'setuptools'
]
build-backend = 'setuptools.build_meta'

[project]
name = 'numbat'
ersion='0.1.0'
authors = [
    {name = 'Sami Babigeon', email = 'sbabigeon@quarkslab.com'},
    { name = 'Eloïse Brocas', email = 'ebrocas@quarkslab.com' },
]
readme = "README.md"
description = 'Library to manipulate and cretae Sourcetrail databases'
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/quarkslab/numbat"
Source = "https://github.com/quarkslab/numbat"
Tracker = "https://github.com/quarkslab/numbat/issues"


[project.optional-dependencies]
test = [
  'pytest'
]

