# -*- coding: utf-8 -*-

#  Copyright 2023 Quarkslab
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = [
  'setuptools'
]
build-backend = 'setuptools.build_meta'

[project]
name = 'numbat'
version='0.2.2'
authors = [
    {name = 'Eloïse Brocas', email = 'ebrocas@quarkslab.com'},
    {name = 'Sami Babigeon', email = 'sbabigeon@quarkslab.com'},
]
readme = "README.md"
description = 'Library to manipulate and create Sourcetrail databases'
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/quarkslab/numbat"
Source = "https://github.com/quarkslab/numbat"
Tracker = "https://github.com/quarkslab/numbat/issues"


[project.optional-dependencies]
test = [
  'pytest'
]
doc = [
    'black',
    'mkdocs',
    'mkdocs-autorefs',
    'mkdocs-gen-files',
    'mkdocs-glightbox',
    'mkdocs-literate-nav',
    'mkdocs-material',
    'mkdocstrings-python',
    'mkdocs-section-index'
]
